--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    height: 100%;
+  }
+  body {
+    background: radial-gradient(circle at 56%, #f5f5f5 0%, #f2f2f2 99%);
+    font-family: "Ubuntu", sans-serif;
+  }
+  #example {
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+    margin-top: 100px;
+  }
+  ul.list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  ul.list li {
+    display: flex;
+    padding: 15px;
+    flex-direction: column;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
+    margin-bottom: 10px;
+    background-color: #fff;
+    border-left: 4px solid #fff;
+    transition: all 0.3s ease;
+    position: relative;
+   
+    border-radius: 4px;
+    overflow: hidden;
+  }
+  ul.list li .title {
+    font-weight: bold;
+    font-size: 18px;
+    position: relative;
+    z-index: 1;
+    line-height: 24px;
+  }
+  ul.list li .subtitle {
+    position: relative;
+    z-index: 1;
+    font-size: 14px;
+    opacity: 0.7;
+  }
+  
